<resources>
    <string name="app_name"> </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_chat">New Chat</string>
    <string name="search">Search</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="new_contact">New Contact</string>
    <string name="title_activity_new_contact">Add a Contact</string>
    <string name="tell_friend">Tell a friend</string>
    <string name="contacts">Contacts</string>
    <string name="help">Help</string>
    <string name="title_select_contact_activity">Select Contact</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat Title</string>
    <string name="attach">Attach File</string>
    <string name="view_contact">View contact</string>
    <string name="clear_chat">Clear Conversation</string>
</resources>
